tests/baselines/reference/typeReferenceDirectives9.errors.txt
/mod2.ts(1,1): error TS18055: Declaration file contains synthesized type reference directives: '"lib"'


==== /mod2.ts (1 errors) ====
    import { Cls } from "./main";
    ~~~~~~
!!! error TS18055: Declaration file contains synthesized type reference directives: '"lib"'
    import "./mod1";
    
    export const cls = Cls;
    export const foo = new Cls().foo();
    export const bar = Cls.bar();
==== /types/lib/index.d.ts (0 errors) ====
    interface Lib { x }
    
==== /main.ts (0 errors) ====
    export class Cls {
        x
    }
    
==== /mod1.ts (0 errors) ====
    /// <reference types="lib" />
    
    import {Cls} from "./main";
    Cls.prototype.foo = function() { return undefined; }
    
    declare module "./main" {
        interface Cls {
            foo(): Lib;
        }
        namespace Cls {
            function bar(): Lib;
        }
    }
    